objects/CMPL123__Report_Generation_Status__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Completion__c</fullName>
        <label>Report Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Ran__c</fullName>
        <label>Report Ran</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Template_ID__c</fullName>
        <label>Report Template ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Template_Name__c</fullName>
        <label>Report Template Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Title__c</fullName>
        <label>Report Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_URL__c</fullName>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Generation_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Report Generation Status</label>
    <nameField>
        <displayFormat>RG-{000000}</displayFormat>
        <label>Report Generation Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Generation Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>